# vlux

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  run.sh
.devcontainer/: devcontainer.json  docker-compose.yaml
cmake/: dependencies.cmake
docker/: Dockerfile  build.sh  docker-compose.yaml
scripts/: shader_compile.sh
src/: CMakeLists.txt  config.json  main.cpp
src/shader/rasterize/: cubemap.frag  cubemap.vert  deferred.comp  frag_input.glsl  shader.frag  shader.vert
src/shader/raytracing/: anyhit.rahit  bufferreferences.glsl  closesthit.rchit  geometry_node.glsl  geometrytypes.glsl  miss.rmiss  mode_push_constant.glsl  random.glsl  ray_payload.glsl  raygen.rgen  shadow.rmiss
src/vlux/: app.cpp  app.h  camera.cpp  camera.h  config.json  control.cpp  control.h  frame_timer.cpp  frame_timer.h  gui.cpp  gui.h  light.h  pch.h  transform.h  uniform_buffer.cpp  uniform_buffer.h
src/vlux/common/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  compute_pipeline.cpp  compute_pipeline.h  depth_stencil.cpp  depth_stencil.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_sets.cpp  descriptor_sets.h  frame_buffer.cpp  frame_buffer.h  graphics_pipeline.cpp  graphics_pipeline.h  image.cpp  image.h  pipeline_layout.cpp  pipeline_layout.h  queue.cpp  queue.h  raytracing_pipeline.cpp  raytracing_pipeline.h  render_pass.cpp  render_pass.h  render_target.h  texture_view.h  utils.cpp  utils.h
src/vlux/cubemap/: cubemap.cpp  cubemap.h
src/vlux/device_resource/: barrier.cpp  barrier.h  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  debug_messenger.cpp  debug_messenger.h  depth_stencil.cpp  depth_stencil.h  device.cpp  device.h  device_resource.cpp  device_resource.h  image.cpp  image.h  instance.cpp  instance.h  queue.cpp  queue.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  sync_object.cpp  sync_object.h  utils.cpp  utils.h  window.h
src/vlux/draw/: draw_strategy.cpp  draw_strategy.h
src/vlux/draw/rasterize/: descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  frame_buffer.cpp  frame_buffer.h  graphics_pipeline.cpp  graphics_pipeline.h  rasterize.cpp  rasterize.h  render_pass.cpp  render_pass.h  texture_view.h
src/vlux/draw/raytracing/: acceleration_structure.cpp  acceleration_structure.h  raytracing.cpp  raytracing.h  scratch_buffer.cpp  scratch_buffer.h
src/vlux/model/: gltf.cpp  gltf.h  index.cpp  index.h  model.h  vertex.cpp  vertex.h
src/vlux/postprocess/: tonemapping.cpp  tonemapping.h
src/vlux/scene/: scene.cpp  scene.h
src/vlux/shader/: shader.cpp  shader.h
src/vlux/texture/: texture.cpp  texture.h  texture_sampler.cpp  texture_sampler.h
src/vlux/utils/: debug.h  io.cpp  io.h  math.cpp  math.h  path.h  string.h  timer.h
test/: CMakeLists.txt  main.cpp
test/vlux/utils/: test_math.cpp  test_path.cpp  test_timer.cpp
tools/shader_compiler/: Cargo.toml  run.sh
